style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.calculator {
    width: 25vw;
    margin: 100px auto;
    border: 1px black solid;
    border-radius: 2rem;
    padding: 2rem 0.5rem;
}

.display {
    font-size: 80px;
    text-align: right;
    min-height: 150px;
    max-width: 100%;
    border: none;
}

.buttons-container {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.row {
    display: flex;
}

button {
    height: 70px;
    flex: 1 1 0;
    border-radius: 1rem;
    border: 1px grey solid;
    font-weight: bolder;
    background-color: rgba(239, 237, 238, 255);
}

.final {
    flex: 1;
}

#equals {
    flex: 2;
    background-color: rgba(237, 128, 46, 255);
    color: rgba(239, 237, 238, 255);
}

/* TODO: MOVE CALCULATOR TOWARDS THE CENTER, VERTICALLY */
/* TODO: BUTTONS SHOULDN'T SQUISH WHEN SCREEN IS NARROWED */

